<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <include layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="172.5dp">
    <ImageView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:scaleType="centerCrop"
        android:background="@color/background" />
        <ImageView
            android:padding="5dp"
            android:layout_width="105dp"
            android:layout_height="105dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:src="@drawable/avatar_placeholder"/>

        <ImageView
            android:id="@+id/user_avatar"
            android:padding="5dp"
            android:layout_width="105dp"
            android:layout_height="105dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:src="@drawable/user_placeholder"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/name_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/colorPrimaryDark"
        android:drawableLeft="@drawable/ic_user_small"
        android:gravity="center_vertical"
        android:drawablePadding="9dp"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginTop="42dp"
        android:text="@string/name"/>

    <TextView
        android:id="@+id/cpf_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/colorPrimaryDark"
        android:drawableLeft="@drawable/ic_cpf"
        android:gravity="center_vertical"
        android:drawablePadding="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="22dp"
        android:layout_marginTop="22dp"
        android:text="@string/cpf"/>

    <TextView
        android:id="@+id/email_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/colorPrimaryDark"
        android:drawableLeft="@drawable/ic_email"
        android:gravity="center_vertical"
        android:drawablePadding="16dp"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginTop="22dp"
        android:text="@string/email"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center_horizontal"
        android:layout_marginBottom="30dp">
        <RelativeLayout
            android:elevation="0dp"
            android:layout_marginTop="20dp"
            style="@style/yellowButtonTheme">
            <com.wang.avi.AVLoadingIndicatorView
                android:layout_width="35dp"
                android:layout_height="30dp"
                android:layout_centerInParent="true"
                app:indicatorName="BallBeatIndicator"
                app:indicatorColor="@android:color/white"
                />

            <Button
                android:id="@+id/btn_login"
                android:visibility="visible"
                style="@style/yellowButtonTheme"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:text="LOGOUT"/>
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>